# ComfyUI-FL-VoxtralTTS

./: README.md  __init__.py  pyproject.toml  requirements.txt
modules/: __init__.py  audio_utils.py  loader.py  model_info.py
nodes/: __init__.py  generate.py  model_loader.py
src/voxtral_tts/: __init__.py  acoustic_transformer.py  backbone.py  codec_decoder.py  config.py  embeddings.py  pipeline.py  tokenizer.py
workflow/: Voxtral.json
