[project]
name = "comfyui-fl-voxtral-tts"
description = "ComfyUI nodes for Mistral Voxtral-4B TTS with direct PyTorch inference. Supports 20 preset voices across 9 languages on CUDA, MPS, and CPU."
version = "1.0.0"
license = { text = "Apache-2.0" }
dependencies = []

[project.urls]
Repository = "https://github.com/filliptm/ComfyUI-FL-VoxtralTTS"

[tool.comfy]
PublisherId = "machinedelusions"
DisplayName = "FL Voxtral TTS"
Icon = ""
